--- a/docs/subs/技术文档.md
+++ b/docs/subs/技术文档.md
@@ -1,6 +1,6 @@
 # :gear: SSPanel-Mining <开发者文档>
 
->更新日期：2021/07/20 
+> 更新日期：2021/07/20
 >
 >版本号：v0.1.1
 
@@ -44,12 +44,12 @@ python main.py
 
 - `classifier`文件夹中存放着检查器（Checker）输出结果，其存放着核心类——分类器（Classify）的运行结果。
 
-  - `staff_arch_general`：常规架构站点，使用统一的代码模板，不采用验证注册；
-  - `staff_arch_reCAPTCHA`：使用Google-reCAPTCHA人机验证；
-  - `staff_arch_slider`：使用geetest滑块验证；
-  - `verity_email`：使用邮箱验证；
-  - `verity_sms`：使用（真实）手机短信验证；
-  - `other_arch`：其他非标准架构站点（依然沿用sspanel但高度diy或魔改）；
+    - `staff_arch_general`：常规架构站点，使用统一的代码模板，不采用验证注册；
+    - `staff_arch_reCAPTCHA`：使用Google-reCAPTCHA人机验证；
+    - `staff_arch_slider`：使用geetest滑块验证；
+    - `verity_email`：使用邮箱验证；
+    - `verity_sms`：使用（真实）手机短信验证；
+    - `other_arch`：其他非标准架构站点（依然沿用sspanel但高度diy或魔改）；
 
   需要注意的是分类器存在一定的误判概率，且当前版本的分类标准较为粗糙，后续会针对特定需求实现自适应的切割分类。
 
@@ -96,7 +96,8 @@ if not exists(CHROMEDRIVER_PATH):
     CHROMEDRIVER_PATH = None
 ```
 
-其中，**建议开发者将下载好的文件移至`./sspanel-mining`工程目录下**，系统运行时既可自动读取chromedriver程序；否则需要经过一系列较为繁琐的环境变量配置过程，可参考[此文章](https://www.freesion.com/article/29381322626/)，此时`CHROMEDRIVER_PATH`将被置为`None`，系统运行时根据环境变量`PATH`读取chromedriver。
+其中，**建议开发者将下载好的文件移至`./sspanel-mining`工程目录下**
+，系统运行时既可自动读取chromedriver程序；否则需要经过一系列较为繁琐的环境变量配置过程，可参考[此文章](https://www.freesion.com/article/29381322626/)，此时`CHROMEDRIVER_PATH`将被置为`None`，系统运行时根据环境变量`PATH`读取chromedriver。
 
 以上仅是推荐配置，若您对Python3开发足够熟练，可改动任意源码二次开发。
 
