--- a/docs/subs/技术文档.md
+++ b/docs/subs/技术文档.md
@@ -1,50 +1,60 @@
 # :gear: SSPanel-Mining <开发者文档>
 
-> 更新日期：2021/12/17
+> 更新日期：2022/02/04
 >
->版本号：v0.2.1
+>版本号：v0.2.2
 
-核心技术栈：`Python3`||`Selenium`
+核心技术栈：`Python3` || `Selenium`
 
 ## 1 环境复现
 
 > [注意] 本文档将以如下参考配置进行项目说明
 
-- 开发工具：`PyCharm 2021.3 (Community Edition)` 、`Anaconda（env Python3.8）`
-
-- 操作系统：`Windows 10.0.19041`
-
-- 必要组件：`google-chrome v96.0.4664.93` 、[`chromedriver v96.0.4664.45`](https://chromedriver.storage.googleapis.com/index.html?path=96.0.4664.45/)
+- 开发工具：`PyCharm 2021.3 (Community Edition)` 、`Anaconda（env Python3.9）`
+- 操作系统：`Windows 10.0.19041`、`Ubuntu 20.04 LTS`
 
 ## 2 启动项目
 
-### 2.1 快速上手
+如下以 `Ubuntu 20.04 LTS` 环境为例介绍快速部署上手指南。
 
-在 `Pycharm` 中运行终端 `Terminal`，以目录`sspanel-mining` 为运行根按序执行以下指令。
+### 拉取仓库
 
-1. **拉取依赖**
-
-```python
-# ./sspanel-mining
-pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+```bash
+git clone https://github.com/RobAI-Lab/sspanel-mining.git /home/sspanel-mining 
 ```
 
-2. **运行demo**
+### 拉取依赖并进入工作空间
 
 ```python
-# ./sspanel-mining
-python main.py
+# /home/sspanel-mining 
+cd /home/sspanel-mining && pip install -r requirements.txt && cd src
 ```
 
-3. **查看输出**
+### Scaffold Install
+
+```bash
+# /home/sspanel-mining/src
+python3 main.py install
+```
+
+### Scaffold Mining
+
+```python
+# /home/sspanel-mining/src
+python3 main.py mining --env=production --collector --classifier --source=local
+```
+
+### 查看输出
+
+> 分类器输出与运行时的通信状态有关，有一定的误判概率，也有一定的时效性。
 
 运行结果以 `.txt` 文件存储在 `./sspanel-mining/src/databse/sspanel_hosts`中。
 
 - 其中`dataset_{datetime}.txt`为采集器（Collector）输出结果，其存储本轮采集获取的暴露在公网上的 `SSPanel-Uim` 站点链接。
 
-- `classifier` 文件夹中存放着分类器（Classifier）的输出结果
+- `classifier` 文件夹中存放着分类器（Classifier）的输出结果。
 
-- 分类数据将以 .csv 文件形式存储在 `/database/staff_hosts/classifier` 中
+- 分类数据将以 .csv 文件形式存储在 `/database/staff_hosts/classifier` 中：
     - 标签解释如下：
          - `Normal`：无验证站点
          - `Google reCAPTCHA`：Google reCAPTCHA 人机验证
@@ -59,51 +69,7 @@ python main.py
         - `拒绝注册`：管理员关闭注册接口
          - `危险通信`：HTTP 直连站点
 
-分类逻辑依赖于运行时通信状态，有一定的误判概率，也有一定的时效性。
-
-### 2.2 打开冰箱门
-
-> 本项目采集器依赖 `Selenium` 实现对 `Chrome浏览器` 的操作，需要运行环境中存在 `Chrome` 以及对应浏览器版本的`chromdriver`。
-
-#### 2.2.1 配置 `google-chrome` 开发环境
-
-（1）安装 Chrome
-
-> 若您电脑中已存在 Chrome 浏览器请跳过此步骤
-
-访问 [Google Chrome](https://www.google.com/intl/zh-CN/chrome/) 下载（最新版）Chrome 应用程序。
-
-（2）查看 Chrome version
-
-如下图所示，在搜索栏中输入 `chrome://settings/help` 查看软件版本。
-
-<img src="https://i.loli.net/2021/07/20/mjGHvCa53ItULSl.png" alt="image-20210720020533007" style="zoom: 33%;" />
-
-（3）安装 chromedriver
-
-访问 [驱动镜像网页](https://npm.taobao.org/mirrors/chromedriver/) 选择对应版本、对应操作系统的应用程序下载并解压出 chromedriver。
-
-版本的选择建议：前 3 组十进制版本号需要和 Chrome 的一致，再根据发布时间选择最新的小版本，如下图所示。
-
-<img src="https://i.loli.net/2021/07/20/gU4qwGOxsF1lSec.png" alt="image-20210720021451671" style="zoom:33%;" />
-
-#### 2.2.2 配置 `config.py` 项目启动参数
-
-**建议开发者将下载好的文件移至 `sspanel-mining` 工程根目录下**，系统运行时既可自动读取 chromedriver 程序；否则需要经过一系列较为繁琐的环境变量配置过程，可参考 [此文章 ](https://www.freesion.com/article/29381322626/)，此时 `CHROMEDRIVER_PATH` 将被置为 `None`，系统运行时根据环境变量 `PATH` 读取 chromedriver。
-
-以上仅是推荐配置，若您对 Python3 应用开发足够熟练，可改动任意源码二次开发。
-
-### 2.3 把大象装入冰箱
-
-### 2.4 关闭冰箱门
-
-## 3 其他设置
-
-### 3.1 关于 `Selenium` 常见报错
-
-> 关于 `WebdriverException `异常类型的中文解释可参考 [此文章](https://blog.csdn.net/To_ChaRiver/article/details/105715293)
-
-### 3.2 注意事项
+## 3 注意事项
 
 > 更多注意事项详见 [注意事项](https://github.com/QIN2DIM/sspanel-mining/blob/main/docs/subs/注意事项.md)
 
